[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/block.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Block.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -32, -32 )
b = Vector2( 32, -32 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -32, 32 )
b = Vector2( 32, 32 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -32, -32 )
b = Vector2( -32, 32 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 32, -32 )
b = Vector2( 32, 32 )

[node name="Block" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource( 1 )

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Up" to="." method="_on_Up_area_entered"]
[connection signal="area_entered" from="Down" to="." method="_on_Down_area_entered"]
[connection signal="area_entered" from="Left" to="." method="_on_Left_area_entered"]
[connection signal="area_entered" from="Right" to="." method="_on_Right_area_entered"]
